Fix serialization between js and java sdk