@@ -2,18 +2,15 @@
 package com.unicity.sdk.token.fungible;
 
 import java.math.BigInteger;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 
 public class TokenCoinData {
     private final Map<CoinId, BigInteger> coins;
 
-    private TokenCoinData(Map<CoinId, BigInteger> coins) {
-        this.coins = coins;
-    }
-
-    public static TokenCoinData create(Map<CoinId, BigInteger> coins) {
-        return new TokenCoinData(Map.copyOf(coins));
+    public TokenCoinData(Map<CoinId, BigInteger> coins) {
+        this.coins = Collections.unmodifiableMap(coins);
     }
 
     public Map<CoinId, BigInteger> getCoins() {
